# avogadroapp

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README.md  org.OpenChemistry.avogadro.yml  org.openchemistry.Avogadro2.metainfo.xml  org.openchemistry.Avogadro2.yaml  spglib.patch
.github/: dependabot.yml  release-drafter.yml
.github/actions/checkout-repositories/: action.yml
.github/workflows/: build_cmake.yml  build_flatpak.yml  build_linux.yml  build_linux_arm64.yml  build_m1.yml  build_mac.yml  build_qt6.yml  build_win_arm.yml  build_windows.yml  clang-format-check.yml  clang-tidy.yml  codacy.yml  codeql-analysis.yml  codeql.yml  flatpak.yml  main.yml  release-drafter.yml  update-i18n-templates.yml
avogadro/: CMakeLists.txt  ImportPQR.cpp  ImportPQR.h  PQRWidget.cpp  PQRWidget.h  PQRWidget.ui  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  application.cpp  application.h  autosave.cpp  autosave.h  avogadro.cpp  avogadro.qrc  avogadroappconfig.h.in  backgroundfileformat.cpp  backgroundfileformat.h  jsoncpp.cpp  mac.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubuilder.cpp  menubuilder.h  navlib_load.cpp  navlib_stub.c  qcocoamessagebox.h  qcocoamessagebox.mm  renderingdialog.cpp  renderingdialog.h  renderingdialog.ui  rpclistener.cpp  rpclistener.h  tdxcontroller.cpp  tdxcontroller.h  tooltipfilter.cpp  tooltipfilter.h  viewfactory.cpp  viewfactory.h
avogadro/icons/: AppIcon.icns  Assets.car  avogadro.icns  avogadro.rc  avogadro2.appdata.xml  avogadro2.desktop  cjson.icns  cml.icns  doc.icns  org.openchemistry.Avogadro2.desktop  org.openchemistry.Avogadro2.metainfo.xml
avogadro/lastinstall/: CMakeLists.txt
avogadro/metainfo/: org.openchemistry.Avogadro2.desktop  org.openchemistry.Avogadro2.metainfo.xml
avogadro/rpc/: CMakeLists.txt  connection.h  connectionlistener.cpp  connectionlistener.h  jsonrpc.cpp  jsonrpc.h  jsonrpcclient.cpp  jsonrpcclient.h  localsocketconnection.cpp  localsocketconnection.h  localsocketconnectionlistener.cpp  localsocketconnectionlistener.h  message.cpp  message.h  messageidmanager_p.cpp  messageidmanager_p.h  rpcglobal.h
cmake/: AppxManifest.xml.in  AvogadroCPack.cmake  AvogadroCPackOptions.cmake.in  BuildPackage.cmake.in  BuildPackageTest.cmake  DeployQt5.cmake  DetermineVersion.cmake  Entitlements.plist  InstallLocation.cmake  MacOSXBundleInfo.plist.in  avogadro2.nsi.in  deploy-osx.cmake.in
docs/: CMakeLists.txt
flatpak/: org.openchemistry.Avogadro2.Molequeue.desktop  org.openchemistry.Avogadro2.appdata.xml  org.openchemistry.Avogadro2.metainfo.xml  org.openchemistry.Avogadro2.yaml
i18n/: af.po  ar.po  avogadroapp.pot  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lir.po  ms.po  nb.po  nl.po  oc.po  pl.po  (+19 more)
scripts/: avogadro-remote.py  extract-messages.sh  filter_sarif.py  flatpak-update.py
scripts/gitsetup/: config
tests/: CMakeLists.txt
